--- a/spec/acceptance/nodesets/vagrant.yml
+++ b/spec/acceptance/nodesets/vagrant.yml
@@ -11,6 +11,7 @@ HOSTS:
   app-centos:
     roles:
       - agent
+      - default
     platform: el-6-x86_64
     box : puppetlabs/centos-6.6-64-nocm
     hypervisor : vagrant
