--- a/spec/acceptance/nodesets/default.yml
+++ b/spec/acceptance/nodesets/default.yml
@@ -1,16 +1,31 @@
 HOSTS:
-  master:
+  puppet-master:
     roles:
       - master
-      - dashboard
       - database
+      - dashboard
+      - agent
     platform: el-6-x86_64
     template: Delivery/Quality Assurance/Templates/vCloud/centos-6-x86_64
     hypervisor: vcloud
-  dmgragent:
+  app-agent:
+    roles:
+      - agent
+      - appserver
+    platform: el-6-x86_64
+    template: Delivery/Quality Assurance/Templates/vCloud/centos-6-x86_64
+    hypervisor: vcloud
+  dmgr-agent:
     roles:
       - agent
       - dmgr
+    platform: el-6-x86_64
+    template: Delivery/Quality Assurance/Templates/vCloud/centos-6-x86_64
+    hypervisor: vcloud
+  ihs-agent:
+    roles:
+      - agent
+      - ihs
     platform: el-6-x86_64
     template: Delivery/Quality Assurance/Templates/vCloud/centos-6-x86_64
     hypervisor: vcloud
