--- a/.sync.yml
+++ b/.sync.yml
@@ -1,13 +1,41 @@
 ---
-appveyor.yml:
-  delete: true
-
-.gitignore:
-  paths:
-    - 'examples/client_ffdc/'
-    - 'client_ffdc'
+.travis.yml:
+  docker_sets:
+    - set: docker/centos-7
+    - set: docker/ubuntu-14.04
+  docker_defaults:
+    bundler_args: ""
+  secure: ""
+  branches:
+    - release
+  extras:
+    - env: CHECK=release_checks
+      rvm: 2.1.9
 
 Gemfile:
+  required:
+    ':system_tests':
+      - gem: 'puppet-module-posix-system-r#{minor_version}'
+        platforms: ruby
+      - gem: 'puppet-module-win-system-r#{minor_version}'
+        platforms:
+          - mswin
+          - mingw
+          - x64_mingw
+      - gem: beaker
+        version: '~> 3.13'
+        from_env: BEAKER_VERSION
+      - gem: beaker-abs
+        from_env: BEAKER_ABS_VERSION
+        version: '~> 0.1'
+      - gem: beaker-pe
+      - gem: beaker-hostgenerator
+        from_env: BEAKER_HOSTGENERATOR_VERSION
+      - gem: beaker-rspec
+        from_env: BEAKER_RSPEC_VERSION
+    ':development':
+      - gem: puppet-blacksmith
+        version: '~> 3.4'
   optional:
     ':development':
       - gem: 'rototiller'
@@ -15,38 +43,11 @@ Gemfile:
     ':system_tests':
       - gem: 'beaker-testmode_switcher'
 
-LICENSE:
-  license_type: 'puppetpe'
-
-NOTICE:
-  unmanaged: true
-
 Rakefile:
-  unmanaged: true
+  requires:
+    - puppet_blacksmith/rake_tasks
+    - puppet-lint/tasks/puppet-lint
 
-spec/acceptance/nodesets/default.yml:
-  unmanaged: true
-
-spec/acceptance/nodesets/centos-7-x64.yml:
-  unmanaged: true
-
-spec/acceptance/nodesets/debian-8-x64.yml:
-  unmanaged: true
-
-spec/acceptance/nodesets/docker/centos-7.yml:
-  unmanaged: true
-
-spec/acceptance/nodesets/docker/ubuntu-14.04.yml:
-  unmanaged: true
-
-spec/acceptance/nodesets/docker/debian-8.yml:
-  unmanaged: true
-
-spec/spec_helper.rb:
-  allow_deprecations: true
-
-.travis.yml:
-  docker_sets: []
-  extras:
-    - rvm: 2.1.9
-      script: bundle exec rake rubocop
+.rubocop.yml:
+  default_configs:
+    inherit_from: .rubocop_todo.yml
