--- a/.sync.yml
+++ b/.sync.yml
@@ -8,10 +8,7 @@
   secure: ""
   branches:
     - release
-  extras:
-    - env: CHECK=release_checks
-      rvm: 2.1.9
-
+ 
 Gemfile:
   required:
     ':system_tests':
@@ -33,9 +30,6 @@ Gemfile:
         from_env: BEAKER_HOSTGENERATOR_VERSION
       - gem: beaker-rspec
         from_env: BEAKER_RSPEC_VERSION
-    ':development':
-      - gem: puppet-blacksmith
-        version: '~> 3.4'
   optional:
     ':development':
       - gem: 'rototiller'
@@ -43,9 +37,11 @@ Gemfile:
     ':system_tests':
       - gem: 'beaker-testmode_switcher'
 
+appveyor.yml:
+  delete: true
+
 Rakefile:
   requires:
-    - puppet_blacksmith/rake_tasks
     - puppet-lint/tasks/puppet-lint
 
 .rubocop.yml:
