--- a/.sync.yml
+++ b/.sync.yml
@@ -8,7 +8,7 @@
   secure: ""
   branches:
     - release
- 
+
 Gemfile:
   required:
     ':system_tests':
@@ -47,3 +47,6 @@ Rakefile:
 .rubocop.yml:
   default_configs:
     inherit_from: .rubocop_todo.yml
+
+.gitlab-ci.yml:
+  unmanaged: true
