--- a/.sync.yml
+++ b/.sync.yml
@@ -23,6 +23,10 @@ Gemfile:
     ':development':
       - gem: 'rototiller'
         version: '0.1.0'
+      - gem: 'github_changelog_generator'
+        git: 'https://github.com/skywinder/github-changelog-generator'
+        ref: '20ee04ba1234e9e83eb2ffb5056e23d641c7a018'
+        condition: "Gem::Version.new(RUBY_VERSION.dup) >= Gem::Version.new('2.2.2')"
     ':system_tests':
       - gem: 'beaker-testmode_switcher'
 
