--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,12 +1,12 @@
 fixtures:
   repositories:
     concat:
-      repo: 'git://github.com/puppetlabs/puppetlabs-concat.git'
+      repo: 'https://github.com/puppetlabs/puppetlabs-concat.git'
     stdlib:
-      repo: 'git://github.com/puppetlabs/puppetlabs-stdlib.git'
+      repo: 'https://github.com/puppetlabs/puppetlabs-stdlib.git'
     staging:
-      repo: 'git://github.com/nanliu/puppet-staging.git'
+      repo: 'https://github.com/nanliu/puppet-staging.git'
     ibm_installation_manager:
-      repo: 'git://github.com/puppetlabs/puppetlabs-ibm_installation_manager.git'
+      repo: 'https://github.com/puppetlabs/puppetlabs-ibm_installation_manager.git'
   symlinks:
     'websphere_application_server': "#{source_dir}"
