(IAC-746) - Add ubuntu 20.04 support

--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -32,7 +32,8 @@ jobs:
         puppet_gem_version: [~> 5.0, ~> 6.0]
         provision_params: ['pe_master="centos-7-x86_64" app_agent="centos-6-x86_64" dmgr_agent="redhat-6-x86_64" ihs_agent="redhat-7-x86_64"',
                            'pe_master="centos-7-x86_64" app_agent="oracle-7-x86_64" dmgr_agent="ubuntu-1404-x86_64" ihs_agent="oracle-6-x86_64"',
-                           'pe_master="centos-7-x86_64" app_agent="ubuntu-1604-x86_64" dmgr_agent="ubuntu-1804-x86_64" ihs_agent="centos-7-x86_64"'
+                           'pe_master="centos-7-x86_64" app_agent="ubuntu-1604-x86_64" dmgr_agent="ubuntu-1804-x86_64" ihs_agent="centos-7-x86_64"',
+                           'pe_master="centos-7-x86_64" app_agent="ubuntu-2004-x86_64" dmgr_agent="ubuntu-1804-x86_64" ihs_agent="centos-7-x86_64"'
                           ]
     steps:
     - uses: actions/checkout@v1
