--- a/.sync.yml
+++ b/.sync.yml
@@ -14,10 +14,10 @@
     enabled: false
   docker_sets: []
   docker_defaults:
-    bundler_args: ''
-  secure: ''
+    bundler_args: ""
+  secure: ""
   branches:
-  - release
+    - release
   simplecov: true
   notifications:
     slack:
@@ -28,7 +28,10 @@ appveyor.yml:
 Gemfile:
   optional:
     ":development":
-    - gem: github_changelog_generator
+      - gem: github_changelog_generator
+      - gem: master_manipulator
+    ":system_tests":
+      - gem: master_manipulator
 Rakefile:
   extras:
     - |
@@ -48,4 +51,8 @@ spec/spec_helper.rb:
 .gitpod.yml:
   unmanaged: false
 .github/workflows/auto_release.yml:
+  unmanaged: false
+.github/workflows/nightly.yml:
+  unmanaged: false
+.github/workflows/pr_test.yml:
   unmanaged: false
