--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -146,6 +146,11 @@ jobs:
           echo STEP_ID=${{ matrix.platform }}-${{ matrix.collection }}-3 >> $GITHUB_ENV
           echo STEP_START=$(date +%s) >> $GITHUB_ENV
           echo ::endgroup::
+      - name: Start SSH session
+        uses: luchihoratiu/debug-via-ssh@main
+        with:
+          NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+          SSH_PASS: ${{ secrets.SSH_PASS }}
       - name: Run integration tests
         run: |
           buildevents cmd $TRACE_ID $STEP_ID 'rake websphere_application_server:integration' -- bundle exec rake websphere_application_server:integration
