--- a/.pdkignore
+++ b/.pdkignore
@@ -42,6 +42,7 @@
 /spec/
 /.vscode/
 /.sync.yml
+/.devcontainer/
 /plans/provision_machines.pp
 /plans/pe_server_setup.pp
 /plans/puppet_agents_setup.pp
