--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -123,11 +123,17 @@ jobs:
           echo
           echo ::endgroup::
           echo ::group::=== INVENTORY ===
-          sed -e 's/password: .*/password: "[redacted]"/' < inventory.yaml || true
+          if [ -f 'spec/fixtures/litmus_inventory.yaml' ]; then
+            FILE='spec/fixtures/litmus_inventory.yaml'
+          elif [ -f 'inventory.yaml' ]; then
+            FILE='inventory.yaml'
+          fi
+          sed -e 's/password: .*/password: "[redacted]"/' < $FILE || true
           echo ::endgroup::
+          echo INVENTORY_PATH=$FILE >> $GITHUB_ENV
       - name: Disable gpg check google-cloud.repo
         run: |
-          if eval "bundle exec bolt --modulepath spec/fixtures/modules command run \"sed -i 's/gpgcheck=1/gpgcheck=0/g' /etc/yum.repos.d/google-cloud.repo\" --targets '*' -i ./inventory.yaml"; then
+          if eval "bundle exec bolt --modulepath spec/fixtures/modules command run \"sed -i 's/gpgcheck=1/gpgcheck=0/g' /etc/yum.repos.d/google-cloud.repo\" --targets '*' -i ./$INVENTORY_PATH"; then
             rc=0
           else
             rc=1
@@ -135,7 +141,7 @@ jobs:
           if test $rc -ne 0; then
             attempt_number=0
             while test $attempt_number -lt 0; do
-              if eval "bundle exec bolt --modulepath spec/fixtures/modules command run \"sed -i 's/gpgcheck=1/gpgcheck=0/g' /etc/yum.repos.d/google-cloud.repo\" --targets '*' -i ./inventory.yaml"; then
+              if eval "bundle exec bolt --modulepath spec/fixtures/modules command run \"sed -i 's/gpgcheck=1/gpgcheck=0/g' /etc/yum.repos.d/google-cloud.repo\" --targets '*' -i ./$INVENTORY_PATH"; then
                 rc=0
                 break
               else
@@ -147,15 +153,15 @@ jobs:
           fi
       - name: Install server
         run: |
-          buildevents cmd $TRACE_ID $STEP_ID 'rake websphere_application_server::server_setup' -- bundle exec bolt --modulepath spec/fixtures/modules plan run websphere_application_server::server_setup collection='${{ matrix.collection }}' -i ./inventory.yaml
+          buildevents cmd $TRACE_ID $STEP_ID 'rake websphere_application_server::server_setup' -- bundle exec bolt --modulepath spec/fixtures/modules plan run websphere_application_server::server_setup collection='${{ matrix.collection }}' -i ./$INVENTORY_PATH
       - name: Install agent
         run: |
-          bundle exec bolt --modulepath spec/fixtures/modules plan run websphere_application_server::agents_setup collection='${{ matrix.collection }}' -i ./inventory.yaml
+          bundle exec bolt --modulepath spec/fixtures/modules plan run websphere_application_server::agents_setup collection='${{ matrix.collection }}' -i ./$INVENTORY_PATH
           rc=$?
           if test $rc -ne 0; then
             attempt_number=0
             while test $attempt_number -lt 0; do
-              bundle exec bolt --modulepath spec/fixtures/modules plan run websphere_application_server::agents_setup collection='${{ matrix.collection }}' -i ./inventory.yaml
+              bundle exec bolt --modulepath spec/fixtures/modules plan run websphere_application_server::agents_setup collection='${{ matrix.collection }}' -i ./$INVENTORY_PATH
               rc=$?
               if test $rc -eq 0; then
                 break
@@ -169,7 +175,7 @@ jobs:
           buildevents cmd $TRACE_ID $STEP_ID 'rake litmus:install_module' -- bundle exec rake 'litmus:install_module'
       - name: Extract files
         run: |
-          buildevents cmd $TRACE_ID $STEP_ID 'rake websphere_application_server::get_files' -- bundle exec bolt --modulepath spec/fixtures/modules plan run websphere_application_server::get_files -i ./inventory.yaml
+          buildevents cmd $TRACE_ID $STEP_ID 'rake websphere_application_server::get_files' -- bundle exec bolt --modulepath spec/fixtures/modules plan run websphere_application_server::get_files -i ./$INVENTORY_PATH
       - name: "Honeycomb: Record deployment times"
         if: ${{ always() }}
         run: |
@@ -191,7 +197,7 @@ jobs:
         if: ${{ always() }}
         continue-on-error: true
         run: |
-          if [ -f inventory.yaml ]; then
+          if [[ -f inventory.yaml || -f spec/fixtures/litmus_inventory.yaml ]]; then
             buildevents cmd $TRACE_ID $STEP_ID 'rake litmus:tear_down' -- bundle exec rake 'litmus:tear_down'
             echo ::group::=== REQUEST ===
             cat request.json || true
