--- a/.sync.yml
+++ b/.sync.yml
@@ -45,5 +45,7 @@ spec/spec_helper.rb:
   unmanaged: false
 .github/workflows/release.yml:
   unmanaged: false
+.github/workflows/nightly.yml:
+  unmanaged: true
 .travis.yml:
   delete: true
